--- a/style.css
+++ b/style.css
@@ -39,3 +39,31 @@ h1 {
   background-image: url(img/7.png);
   background-repeat: no-repeat;
 }
+.thirdpart {
+  text-align: center;
+  margin-right: 20%;
+  margin-left: 20%;
+}
+h2 {
+  font-size: 30px;
+}
+#imgsection {
+  display: flex;
+  margin-right: 10px;
+  padding: 20px;
+}
+#imgsection img {
+  width: 100%;
+}
+.supermodel {
+  box-shadow: 0px 0px 20px #ccc;
+  border-radius: 30px;
+  width: 25%;
+  margin-right: 2%;
+  margin-left: 5%;
+  margin-bottom: 100px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+}
