--- a/style.css
+++ b/style.css
@@ -61,9 +61,28 @@ h2 {
   width: 25%;
   margin-right: 2%;
   margin-left: 5%;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 10px;
+}
+#lowerpart {
+  display: flex;
+
+  box-shadow: 0px 0px 20px #ccc;
+  border-radius: 30px;
+  margin-right: 5%;
+  margin-left: 5%;
+  margin-bottom: 10px;
+  padding-top: 20px;
+  padding-left: 150px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+.footer {
+  text-align: center;
+  background-color: #26354a;
+  padding-bottom: 100px;
+  padding-top: 20px;
 }
