--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
   padding: 10px 40px;
   color: white;
   background-image: linear-gradient(orange, tomato, red);
-  border-radius: 10px;
+  border-radius: 30px;
 }
 .middle {
   width: 50%;
@@ -85,4 +85,8 @@ h2 {
   background-color: #26354a;
   padding-bottom: 100px;
   padding-top: 20px;
+  color: white;
+}
+.footerfood {
+  color: yellowgreen;
 }
