--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ h1 {
   display: flex;
   margin-bottom: 150px;
 }
+#lastpart {
+  margin-bottom: 100px;
+}
 .toppertag {
   color: orangered;
 }
@@ -72,13 +75,18 @@ h2 {
 
   box-shadow: 0px 0px 20px #ccc;
   border-radius: 30px;
-  margin-right: 5%;
-  margin-left: 5%;
+  margin-right: 4%;
+  margin-left: 6%;
   margin-bottom: 10px;
   padding-top: 20px;
   padding-left: 150px;
   padding-bottom: 0px;
   margin-bottom: 0px;
+}
+.upperfot {
+  margin-left: 2%;
+  margin-right: 20%;
+  margin-bottom: 5%;
 }
 .footer {
   text-align: center;
