--- a/style.css
+++ b/style.css
@@ -77,8 +77,9 @@ h2 {
   border-radius: 30px;
   margin-right: 4%;
   margin-left: 6%;
-  margin-bottom: 10px;
-  padding-top: 20px;
+  margin-bottom: 0%;
+  margin-top: 0%;
+  padding-top: 0%;
   padding-left: 150px;
   padding-bottom: 0px;
   margin-bottom: 0px;
