--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
 }
 .display {
   display: flex;
-  margin-bottom: 150px;
+  margin-bottom: 100px;
 }
 #lastpart {
   margin-bottom: 100px;
@@ -27,7 +27,14 @@ h1 {
   text-decoration: none;
   padding: 10px 40px;
   color: white;
-  background-image: linear-gradient(orange, tomato, red);
+  background-image: linear-gradient(#f12711, #f5af19);
+  border-radius: 30px;
+}
+#secondbutton {
+  text-decoration: none;
+  padding: 10px 40px;
+  color: white;
+  background-image: linear-gradient(#30e8bf, #ff8235);
   border-radius: 30px;
 }
 .middle {
